# scResolve

./: LICENSE  README.md  get_data.sh  pyproject.toml
configurations/: configurations.toml  tutorial.toml
scresolve/: __init__.py  __main__.py  _config.py  super_resolution.py
scresolve/segment/: model_train.py  postprocessing.py  preprocessing.py  run_segment.py  super_resolution_to_segment.py
scresolve/segment/src/: postprocessing.py  preprocessing.py  scs.py  transformer.py
