[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "scresolve"
version = "0.1.0"
description = "test"
authors = ["Young Je Lee <youngjel@cs.cmu.edu>"]

[tool.poetry.dependencies]
click = "^8.0.0"
h5py = "^3.0.0"
imageio = "^2.9.0"
matplotlib = "^3.3.2"
numpy = "^1.19.4"
opencv-python = "^4.4.0"
pandas = "^1.1.4"
Pillow = "^9.0.1"
pyro-ppl = ">=1.5.0,<1.6.0"
python = "^3.8"
scikit-learn = "^0.24.2"
scipy = "^1.5.4"
tensorboard = "^2.5.0"
tifffile = "^2021.8.30"
tomlkit = "^0.10.1"
tqdm = "^4.51.0"
tabulate = "^0.8.7"
anndata = "^0.8.0"
scanpy = "^1.9.1"
tensorflow = "2.8.2"
tensorflow_addons = "^0.19.0"
imagecodecs = "^2022.12.24"
scikit-misc = "^0.1.4"
keras = "2.8.0"
spateo-release = "1.0.0"
pyvista = "^0.42.3"
torch = [
  {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'" }
]
torchvision= [
  {url = "https://download.pytorch.org/whl/cu113/torchvision-0.12.0%2Bcu113-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu113/torchvision-0.12.0%2Bcu113-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'"}
]

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pre-commit = "^2.8.2"
pylint = "^2.8.2"
pytest = "^6.1.2"
pytest-console-scripts = "^1.0.0"
pytest-cov = "^2.10.1"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.3.1"


[tool.poetry.scripts]
scresolve = "scresolve.__main__:cli"
